--- a/ProjectTracker/en.lproj/Localizable.strings
+++ b/ProjectTracker/en.lproj/Localizable.strings
@@ -19,6 +19,7 @@
 
 "Up next" = "Up next";
 "More to explore" = "More to explore";
+"%@, %lld items, %g%%, complete." = "%@, %lld items, %g%%, complete.";
 
 
 
@@ -41,6 +42,10 @@
 "New Project" = "New Project";
 "New Item" = "New Item";
 
+"%@, completed." = "%@, completed.";
+"%@, high priority." = "%@, high priority.";
+
+
 
 
 /* EDITING PROJECTS */
@@ -48,6 +53,21 @@
 "Project name" = "Project name";
 "Description of this project" = "Description of this project";
 "Custom project color" = "Custom project color";
+
+"Select a color" = "Select a color";
+"Pink" = "Pink";
+"Purple" = "Purple";
+"Red" = "Red";
+"Orange" = "Orange";
+"Gold" = "Gold";
+"Green" = "Green";
+"Teal" = "Teal";
+"Light Blue" = "Light Blue";
+"Dark Blue" = "Dark Blue";
+"Midnight" = "Midnight";
+"Dark Gray" = "Dark Gray";
+"Gray" = "Gray";
+
 
 /* Options to close (mark as finished), open (mark as unfinished), or delete a project. */
 "Close this project" = "Close this project";
